// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`choerodon-ui dist files exports modules component-pro correctly 1`] = `
Array [
  "Axios",
  "DataSet",
  "Form",
  "Table",
  "Button",
  "CheckBox",
  "Radio",
  "TextField",
  "NumberField",
  "Currency",
  "Password",
  "UrlField",
  "EmailField",
  "Range",
  "TextArea",
  "DatePicker",
  "DateTimePicker",
  "TimePicker",
  "WeekPicker",
  "MonthPicker",
  "YearPicker",
  "ColorPicker",
  "IconPicker",
  "IntlField",
  "Lov",
  "Select",
  "SelectBox",
  "Transfer",
  "Progress",
  "Modal",
  "ModalContainer",
  "ModalProvider",
  "Upload",
  "Icon",
  "Row",
  "Col",
  "localeContext",
  "Pagination",
  "Menu",
  "Tabs",
  "Spin",
  "Tooltip",
  "message",
  "notification",
  "Tree",
  "Dropdown",
  "Output",
  "Switch",
  "Stores",
  "Animate",
  "CodeArea",
  "Skeleton",
]
`;

exports[`choerodon-ui dist files exports modules correctly 1`] = `
Array [
  "Affix",
  "Anchor",
  "AutoComplete",
  "Alert",
  "Avatar",
  "BackTop",
  "Badge",
  "Breadcrumb",
  "Button",
  "Calendar",
  "Card",
  "Collapse",
  "Carousel",
  "Cascader",
  "Checkbox",
  "Col",
  "DatePicker",
  "Divider",
  "Dropdown",
  "Form",
  "Icon",
  "Input",
  "InputNumber",
  "Layout",
  "List",
  "LocaleProvider",
  "message",
  "Menu",
  "Modal",
  "notification",
  "Pagination",
  "Popconfirm",
  "Popover",
  "Progress",
  "Radio",
  "Rate",
  "Row",
  "Select",
  "Slider",
  "Spin",
  "Steps",
  "Switch",
  "Skeleton",
  "Table",
  "Transfer",
  "Tree",
  "TreeSelect",
  "Tabs",
  "Tag",
  "TimePicker",
  "Timeline",
  "Tooltip",
  "Mention",
  "Upload",
  "version",
  "IconSelect",
  "Animate",
  "Responsive",
  "configure",
  "getConfig",
]
`;
